# GRAMLANG

./: .gitignore  CRITIQUES.md  EXPERIMENT_LOG.md  EXTENSION_PLAN.md  MANUSCRIPT_OUTLINE.md  NEURIPS_PLAN.md  README.md  RESEARCH_PLAN.md  RESULTS.md  factorial_log.txt  pyproject.toml  requirements.txt
abstract/: ismb_abstract.tex  ismb_abstract_simple.tex  ismb_submission_notes.md
manuscript/neurips2026/: README.md  checklist.tex  main.tex  refs.bib
paper/: main.tex  neurips_2026.sty  references.bib
results/: probe_training_all_results.json  probe_training_results.json
results/confirmatory/: agarwal_enhancer_classification.json  agarwal_motif_pair_analysis.json  cross_dataset_consistency.json  jores_enhancer_classification.json  jores_motif_pair_analysis.json  klein_enhancer_classification.json  klein_motif_pair_analysis.json
scripts/: analyze_v1_rules.py  collect_v2_results.py  debug_sfgn_nan.py  generate_confirmatory_figures.py  generate_final_figures.py  generate_manuscript_figures.py  generate_sfgn_figures.py  generate_v2_figures.py  prepare_pipeline_data.py  preprocess_mpra.py  preprocess_remaining_mpra.py  rerun_biophysics_robust.py  resolve_critiques.py  resolve_critiques_gpu.py  run_ablations.py  run_confirmatory_experiments.py  run_critique_experiments.py  run_factorial_remaining.py  run_full_pipeline.py  run_sf_gsi.py  run_spacer_ablation.py  run_v2_pipeline.py  run_v3_analysis.py  run_validation_analyses.py  run_validation_analyses_gpu.py  train_all_probes.py  train_sfgn.py  validation_experiment_1.py  validation_experiment_j.py
src/utils/: io.py
(+183 files in other folders)
