[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gramlang"
version = "0.1.0"
description = "GRAMLANG: Decoding the Computational Grammar of Gene Regulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bryan Cheng", email = "bcbc7264@gmail.com"},
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "einops>=0.7.0",
    "enformer-pytorch>=0.8.10",
    "biopython>=1.82",
    "pyfaidx>=0.7.2",
    "pysam>=0.22.0",
    "logomaker>=0.8",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "scipy>=1.11.4",
    "scikit-learn>=1.3.2",
    "statsmodels>=0.14.1",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "tensorly>=0.8.1",
    "tqdm>=4.66.1",
    "h5py>=3.10.0",
    "pyarrow>=14.0.1",
    "huggingface-hub",
    "sentencepiece",
    "protobuf",
]

[project.optional-dependencies]
tracking = ["wandb>=0.16.1"]
datasets = ["datasets"]

[tool.setuptools.packages.find]
include = ["src*"]
